RESOLVED FIXED184918
REGRESSION (r230919): API test WebKit.AutoLayoutIntegration is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=184918
Summary REGRESSION (r230919): API test WebKit.AutoLayoutIntegration is a flaky failure
Ryan Haddad
Reported 2018-04-24 08:45:26 PDT
API test WebKit.AutoLayoutIntegration is a flaky failure FAIL WebKit.AutoLayoutIntegration /Volumes/Data/slave/sierra-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/AutoLayoutIntegration.mm:98 Value of: intrinsicContentSize.height Actual: 8 Expected: _expectedIntrinsicContentSize.height Which is: 10 https://build.webkit.org/builders/Apple%20Sierra%20Release%20WK1%20(Tests)/builds/9693 https://build.webkit.org/builders/Apple%20High%20Sierra%20Debug%20WK1%20(Tests)/builds/3431
Attachments
Patch (5.06 KB, patch)
2018-04-27 14:30 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2018-04-24 17:42:45 PDT
Ryan Haddad
Comment 2 2018-04-25 10:24:08 PDT
The earliest failures I can see from parsing logs on the bots is with https://trac.webkit.org/changeset/230919/webkit, which appears to be unrelated. Looking at changes around that revision, this seems like it *could* be related: https://trac.webkit.org/changeset/230916/webkit
Wenson Hsieh
Comment 3 2018-04-25 10:27:24 PDT
(In reply to Ryan Haddad from comment #2) > The earliest failures I can see from parsing logs on the bots is with > https://trac.webkit.org/changeset/230919/webkit, which appears to be > unrelated. > > Looking at changes around that revision, this seems like it *could* be > related: https://trac.webkit.org/changeset/230916/webkit That change only has an effect when EXTRA_ZOOM_MODE is enabled, so I would not expect that to be related. (i.e., shouldIgnoreScalingConstraintsRegardlessOfContentSize() always returns false in non-extra-zoom-mode).
Ryan Haddad
Comment 4 2018-04-25 10:28:31 PDT
(In reply to Wenson Hsieh from comment #3) > (In reply to Ryan Haddad from comment #2) > > The earliest failures I can see from parsing logs on the bots is with > > https://trac.webkit.org/changeset/230919/webkit, which appears to be > > unrelated. > > > > Looking at changes around that revision, this seems like it *could* be > > related: https://trac.webkit.org/changeset/230916/webkit > > That change only has an effect when EXTRA_ZOOM_MODE is enabled, so I would > not expect that to be related. (i.e., > shouldIgnoreScalingConstraintsRegardlessOfContentSize() always returns false > in non-extra-zoom-mode). Ok, the search continues.
Ryan Haddad
Comment 5 2018-04-27 10:24:39 PDT
I can reproduce this locally, so I'll try to bisect.
Ryan Haddad
Comment 6 2018-04-27 13:59:17 PDT
This does indeed appear to have regressed with https://trac.webkit.org/changeset/230919/webkit I cannot reproduce when running this test a few times with a build of r230918, but I can with r230919. Chris, can you take a look?
Chris Dumez
Comment 7 2018-04-27 14:00:22 PDT
(In reply to Ryan Haddad from comment #6) > This does indeed appear to have regressed with > https://trac.webkit.org/changeset/230919/webkit > > I cannot reproduce when running this test a few times with a build of > r230918, but I can with r230919. > > Chris, can you take a look? Sure.
Chris Dumez
Comment 8 2018-04-27 14:30:23 PDT
Chris Dumez
Comment 9 2018-05-01 13:12:25 PDT
Tim & Wenson: ping review?
WebKit Commit Bot
Comment 10 2018-05-01 13:40:27 PDT
Comment on attachment 339029 [details] Patch Clearing flags on attachment: 339029 Committed r231208: <https://trac.webkit.org/changeset/231208>
WebKit Commit Bot
Comment 11 2018-05-01 13:40:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.