REGRESSION (r230919): API test WebKit.AutoLayoutIntegration is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=184918 <rdar://problem/39705516>

Reviewed by Wenson Hsieh.

Make sure provisional load has started before calling beginLayoutAtMinimumWidth
on the AutoLayoutWKWebView to restore pre-r230919 behavior. The load now starts
asynchronously because we ask the client if it is OK to do the load and the policy
delegates are asynchronous nowadays.

* TestWebKitAPI/Tests/WebKitCocoa/AutoLayoutIntegration.mm:
(-[AutoLayoutWKWebView load:withWidth:expectingContentSize:resettingWidth:]):
* TestWebKitAPI/cocoa/TestNavigationDelegate.h:
* TestWebKitAPI/cocoa/TestNavigationDelegate.mm:
(-[TestNavigationDelegate webView:didStartProvisionalNavigation:]):
(-[TestNavigationDelegate waitForDidStartProvisionalNavigation]):
(-[WKWebView _test_waitForDidStartProvisionalNavigation]):


Canonical link: https://commits.webkit.org/200660@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231208 268f45cc-cd09-0410-ab3c-d52691b4dbfc